# gnome-l10n

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
po/: gnome-l10n.pot  sv.po
src/gnome_l10n/: __main__.py  api.py  main.py
