[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnome-l10n"
version = "0.1.0"
description = "GTK4/Adwaita translation statistics viewer for GNOME"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]

[project.gui-scripts]
gnome-l10n = "gnome_l10n.main:main"

[project.scripts]
gnome-l10n = "gnome_l10n.main:main"
